enhance plugin commands
1. store plugin into config file
2. allow multiple urls